[gd_scene load_steps=28 format=3 uid="uid://744hr15pnlib"]

[ext_resource type="Script" path="res://Cenas/player.gd" id="1_rsu7v"]
[ext_resource type="Texture2D" uid="uid://ct8uqpacoxaq1" path="res://Assets Super Mario Bros/Sprites/Mario_Big_Idle.png" id="2_21qdd"]
[ext_resource type="Texture2D" uid="uid://d3jwm15et3t22" path="res://Assets Super Mario Bros/Sprites/Mario_Small_Idle.png" id="2_edg30"]
[ext_resource type="Shape2D" uid="uid://bjar3vtoet5ob" path="res://resources/CollisionShapes/small_mario.tres" id="3_76814"]
[ext_resource type="Texture2D" uid="uid://c3njnoy5owfh3" path="res://Assets Super Mario Bros/Sprites/Mario_Big_Jump.png" id="3_wc6oe"]
[ext_resource type="Texture2D" uid="uid://crqgheu7ndoxs" path="res://Assets Super Mario Bros/Sprites/Mario_Big_Pole.png" id="4_jcchu"]
[ext_resource type="Texture2D" uid="uid://dvnr77h30cjn6" path="res://Assets Super Mario Bros/Sprites/Mario_Big_Run1.png" id="5_hpbpw"]
[ext_resource type="Texture2D" uid="uid://biwgmc04ug3tt" path="res://Assets Super Mario Bros/Sprites/Mario_Big_Run2.png" id="6_04cw1"]
[ext_resource type="Texture2D" uid="uid://cxxi757iq1gnv" path="res://Assets Super Mario Bros/Sprites/Mario_Big_Run3.png" id="7_g821f"]
[ext_resource type="Texture2D" uid="uid://k303fjvwyalc" path="res://Assets Super Mario Bros/Sprites/Mario_Big_Slide.png" id="8_tqacx"]
[ext_resource type="Texture2D" uid="uid://4axg8se7m40x" path="res://Assets Super Mario Bros/Sprites/Mario_Shooting_Idle.png" id="9_e852f"]
[ext_resource type="Texture2D" uid="uid://ugx1dv5u8m74" path="res://Assets Super Mario Bros/Sprites/Mario-Shooting.png" id="11_67nob"]
[ext_resource type="Texture2D" uid="uid://d3i8ain3y4vfj" path="res://Assets Super Mario Bros/Sprites/Mario_Shooting_Jump.png" id="12_jcjvj"]
[ext_resource type="Texture2D" uid="uid://cwns46e1wprcc" path="res://Assets Super Mario Bros/Sprites/Mario_Shooting_Pole.png" id="13_g8emx"]
[ext_resource type="Texture2D" uid="uid://bsfrxav8x3dot" path="res://Assets Super Mario Bros/Sprites/Mario_Shooting_Run1.png" id="14_rpt00"]
[ext_resource type="Texture2D" uid="uid://cipjmquw1tlrv" path="res://Assets Super Mario Bros/Sprites/Mario_Shooting_Run2.png" id="15_oocm6"]
[ext_resource type="Texture2D" uid="uid://daqnle02fss6v" path="res://Assets Super Mario Bros/Sprites/Mario_Shooting_Run3.png" id="16_r2k48"]
[ext_resource type="Texture2D" uid="uid://1w6lqgnlyqo2" path="res://Assets Super Mario Bros/Sprites/Mario_Shooting-Slide.png" id="17_lbkyv"]
[ext_resource type="Texture2D" uid="uid://bausni6inywyv" path="res://Assets Super Mario Bros/Sprites/Mario_Small_Death.png" id="18_jxtb4"]
[ext_resource type="Texture2D" uid="uid://bqfjqbv1vr2oq" path="res://Assets Super Mario Bros/Sprites/Mario_Small_Jump.png" id="19_ku1lw"]
[ext_resource type="Texture2D" uid="uid://ckd7ka2h150dt" path="res://Assets Super Mario Bros/Sprites/Mario_Small_Pole.png" id="20_r1p0s"]
[ext_resource type="Texture2D" uid="uid://b7pkrn5h1n5lm" path="res://Assets Super Mario Bros/Sprites/Mario_Small_Run1.png" id="21_4qup8"]
[ext_resource type="Texture2D" uid="uid://dlhg7nbxeials" path="res://Assets Super Mario Bros/Sprites/Mario_Small_Run2.png" id="22_sdv13"]
[ext_resource type="Texture2D" uid="uid://d01eopk6c4cx1" path="res://Assets Super Mario Bros/Sprites/Mario_Small_Run3.png" id="23_x5vqs"]
[ext_resource type="Texture2D" uid="uid://cal7r48xqmfrt" path="res://Assets Super Mario Bros/Sprites/Mario_Small_Slide.png" id="24_i5578"]
[ext_resource type="Script" path="res://Cenas/animacao.gd" id="25_r7uq8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vghjf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_21qdd")
}],
"loop": true,
"name": &"big_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_wc6oe")
}],
"loop": true,
"name": &"big_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_jcchu")
}],
"loop": true,
"name": &"big_pole",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_hpbpw")
}, {
"duration": 1.0,
"texture": ExtResource("6_04cw1")
}, {
"duration": 1.0,
"texture": ExtResource("7_g821f")
}],
"loop": true,
"name": &"big_run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_tqacx")
}],
"loop": true,
"name": &"big_slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_21qdd")
}, {
"duration": 1.0,
"texture": ExtResource("9_e852f")
}, {
"duration": 1.0,
"texture": ExtResource("2_edg30")
}, {
"duration": 1.0,
"texture": ExtResource("9_e852f")
}, {
"duration": 1.0,
"texture": ExtResource("2_edg30")
}, {
"duration": 1.0,
"texture": ExtResource("9_e852f")
}, {
"duration": 1.0,
"texture": ExtResource("2_edg30")
}, {
"duration": 1.0,
"texture": ExtResource("9_e852f")
}],
"loop": true,
"name": &"big_to_shooting",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_67nob")
}],
"loop": true,
"name": &"shooting",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_e852f")
}],
"loop": true,
"name": &"shooting_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_jcjvj")
}],
"loop": true,
"name": &"shooting_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_g8emx")
}],
"loop": true,
"name": &"shooting_pole",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_rpt00")
}, {
"duration": 1.0,
"texture": ExtResource("15_oocm6")
}, {
"duration": 1.0,
"texture": ExtResource("16_r2k48")
}],
"loop": true,
"name": &"shooting_run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_lbkyv")
}],
"loop": true,
"name": &"shooting_slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_jxtb4")
}],
"loop": true,
"name": &"small_death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_edg30")
}],
"loop": true,
"name": &"small_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_ku1lw")
}],
"loop": true,
"name": &"small_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_r1p0s")
}],
"loop": true,
"name": &"small_pole",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_4qup8")
}, {
"duration": 1.0,
"texture": ExtResource("22_sdv13")
}, {
"duration": 1.0,
"texture": ExtResource("23_x5vqs")
}],
"loop": true,
"name": &"small_run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_i5578")
}],
"loop": true,
"name": &"small_slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_edg30")
}, {
"duration": 1.0,
"texture": ExtResource("2_21qdd")
}, {
"duration": 1.0,
"texture": ExtResource("2_edg30")
}, {
"duration": 1.0,
"texture": ExtResource("2_21qdd")
}, {
"duration": 1.0,
"texture": ExtResource("2_edg30")
}, {
"duration": 1.0,
"texture": ExtResource("2_21qdd")
}, {
"duration": 1.0,
"texture": ExtResource("2_edg30")
}, {
"duration": 1.0,
"texture": ExtResource("2_21qdd")
}],
"loop": false,
"name": &"small_to_big",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_edg30")
}, {
"duration": 1.0,
"texture": ExtResource("9_e852f")
}, {
"duration": 1.0,
"texture": ExtResource("2_edg30")
}, {
"duration": 1.0,
"texture": ExtResource("9_e852f")
}, {
"duration": 1.0,
"texture": ExtResource("2_edg30")
}, {
"duration": 1.0,
"texture": ExtResource("9_e852f")
}, {
"duration": 1.0,
"texture": ExtResource("2_edg30")
}, {
"duration": 1.0,
"texture": ExtResource("9_e852f")
}],
"loop": true,
"name": &"small_to_shooting",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_rsu7v")

[node name="Animacao" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vghjf")
animation = &"small_death"
script = ExtResource("25_r7uq8")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 6

[node name="AreaColisao" type="CollisionShape2D" parent="Area2D"]
shape = ExtResource("3_76814")

[node name="BodyColisao" type="CollisionShape2D" parent="."]
shape = ExtResource("3_76814")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
